--- a/static/css/certification.css
+++ b/static/css/certification.css
@@ -3,7 +3,7 @@
 	left: .26rem;
 	top: .26rem;
 }
-#edit{
+.edit{
 	position: absolute;
 	right: .26rem;
 	top: .26rem;
@@ -76,6 +76,26 @@
 .avater-list-box{
 	min-width: 100%;
 	overflow: hidden;
+}
+.mask{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: 100;
+	width: 100%;
+	height: 100vh;
+}
+.choose-op{
+	position: absolute;
+	bottom: 0px;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	height: 1rem;
+	font-size: .3rem;
+	line-height: 1rem;
+	padding: 0px .3rem;
+	color: #fff;
 }
 .weui_uploader_files{
 	float: left;
