--- a/static/css/rechargewithdraw.css
+++ b/static/css/rechargewithdraw.css
@@ -1,15 +1,18 @@
-._recharge_withdraw-container{
+.container{
+    position: relative;
+    top: .88rem;
     margin:.36rem .3rem;
     padding:.4rem .55rem;
     background-color:#fff;
     font-size:.3rem;
     overflow: hidden;
+    box-shadow: 0px 2px 4px 1px #ccc;
+    border-radius: 5px;
 }
 
 .div-2{
     margin-top:.75rem;
     padding-bottom:.46rem;
-    height:.6rem;
     line-height:.6rem;
     font-size:.6rem;
     overflow: hidden;
@@ -37,7 +40,7 @@
     margin-top:.15rem;
 }
 
-._recharge_withdraw-btn{
+.rechargewithdraw-btn{
     margin-top:.5rem;
     height:1rem;
     line-height:1rem;
