--- a/static/css/base.css
+++ b/static/css/base.css
@@ -229,8 +229,12 @@
     font-size: .3rem;
     color: #fff;
 }
-.op-btn-disable{
-    opacity: .5;
+.op-btn-disable::before{
+    display: block;
+    content: '保存';
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,.5);
 }
 /*行*/
 
