--- a/static/css/certification.css
+++ b/static/css/certification.css
@@ -81,7 +81,7 @@
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	z-index: 100;
+	z-index: 10001;
 	width: 100%;
 	height: 100vh;
 }
@@ -116,6 +116,10 @@
 	text-align: center;
 	color: #fff;
 	background-color: #999;
+}
+.weui_uploader_file>img{
+	width: 100%;
+	height: 100%;
 }
 .base-info{
 	margin-top: .26rem;
