--- a/static/css/weui.css
+++ b/static/css/weui.css
@@ -191,7 +191,7 @@ a {
 
 .weui_btn{
 	outline: none;
-	border-radius: 4px;
+	border-radius: .3rem;
 	padding: .2rem .34rem;
 	border: none;
 	background-color: transparent;
