--- a/static/css/base.css
+++ b/static/css/base.css
@@ -201,7 +201,7 @@
 }
 /* 头部标题 */
 .primary-header{
-    position: fixed;
+    position: absolute;
     top: 0px;
     left: 0px;
     z-index: 100;
