--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,11 @@
 
 #app{
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    --webkit-overflow-scrolling: touch;
 }
-
 .border-bottom-1px,.border-1px{
     position: relative;
 }
@@ -201,7 +204,7 @@
 }
 /* 头部标题 */
 .primary-header{
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     z-index: 100;
@@ -225,7 +228,7 @@
     position: fixed;
     bottom: 0px;
     left: 0px;
-    z-index: 10000;
+    z-index: 1000;
     width: 100%;
     height: 1rem;
     line-height: 1rem;
