--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,11 +1,4 @@
 
-#app{
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    --webkit-overflow-scrolling: touch;
-}
 .border-bottom-1px,.border-1px{
     position: relative;
 }
@@ -112,8 +105,7 @@
 }
 /* 列表 */
 .container{
-    overflow: hidden;
-    padding: 0px .06rem;
+    padding: 0px .06rem;5
 }
 .con-list{
     float: left;
