--- a/static/css/weui.css
+++ b/static/css/weui.css
@@ -6,25 +6,20 @@
 
 html {
     -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
-    font-family: -apple-system-font, "Helvetica Neue", Arial, sans-serif
-}
-
-* {
-    margin: 0;
-    padding: 0
+    font-family: -apple-system-font, "Helvetica Neue", Arial, sans-serif;
 }
 
 a img {
-    border: 0
+    border: 0;
 }
 
 a {
     text-decoration: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 @font-face {
